# grains2

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
analysis/: lifetime-dirty-protopapa18.py  lifetimes-c2017k2-protopapa22dps.py  plot-lifetimes-protopapa22dps.py
docs/: conf.py  index.rst
docs/grains2/: gsd.rst  lte.rst  materials.rst  porosity.rst  spectra.rst  sublimation.rst
grains2/: __init__.py  ema.py  emission.py  emt.py  gsd.py  lte.py  material.py  porosity.py  scattering.py
grains2/bhcoat/: __init__.py
grains2/bhmie/: __init__.py
grains2/data/: Warren84_T266K.txt  fe100o.txt  fe50o.txt  oliv_nk_y.txt  oliv_vis.txt  olivine95.csv
grains2/davint/: __init__.py
grains2/tests/: test_material.py
licenses/: LICENSE  bhmie-bhcoat.txt
scripts/: grains2-mass  water-ice-lifetime
src/: CMakeLists.txt
src/bhcoat/: bhcoat.f  bhcoat.pyf
src/bhmie/: bhmie.f  bhmie.pyf
