[project]
name = "grains2"
description = "Dust and ice grain models, especially for solar system comets"
readme = "README.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "MIT" }
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy<2",
    "astropy>=6.0",
    "matplotlib>=3.8",
    "mskpy>=3.0",
    "scipy>=1.13",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx-astropy>=1.3"]

[project.urls]
homepage = "https://github.com/mkelley/grains2"

[build-system]
requires = ["setuptools<65", "wheel", "setuptools_scm[toml]>=6.2", "numpy<2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "grains2/_version.py"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/*"]

[tool.setuptools.packages.find]
include = ["grains2*"]
