[project]
name = "grains2"
description = "Dust and ice grain models, especially for solar system comets"
readme = "README.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "MIT" }
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy<2",
    "astropy>=6.0",
    "matplotlib>=3.8",
    "mskpy>=3.0",
    "scipy>=1.13",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["sphinx-astropy>=1.3", "sphinx>=1.3", "sphinx-automodapi", "numpydoc"]

test = [
    "tox",
    "coverage>=6.4.4",
    "pytest>=8.0.0",
    "pytest-doctestplus>=1.0.0",
    "pytest-astropy-header>=0.2.1",
    "pytest-astropy>=0.10.0",
    "pytest-xdist>=2.5.0",
]

[project.urls]
homepage = "https://github.com/mkelley/grains2"

[build-system]
requires = ["setuptools<65", "wheel", "setuptools_scm[toml]>=6.2", "numpy<2"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "grains2/_version.py"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/*"]

[tool.setuptools.packages.find]
include = ["grains2*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["grains2", "docs"]
norecursedirs = ["docs[\\/]_build", "docs[\\/]generated"]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = [
    "--color=yes",
    "--doctest-rst",
    "--strict-config",
    "--strict-markers",
    "-p no:legacypath",
]
